[package]
name = "indy_load_generator"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indy-vdr = { git = "https://github.com/hyperledger/indy-vdr", branch = "did-indy" }
indy-data-types = "0.5"
rand =  { version = "0.8.5", features = ["libc"] }
clap = { version = "3.1.3", features = ["derive"] }
tokio = { version = "1.20", features = ["rt"]}
num_cpus = "1.13"
log = "0.4.0"
env_logger = "0.9.0"
futures-executor = "0.3.17"
futures = "0.3.21"

[features]
derive = []
