[package]
name = "indy_load_generator"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indy-vdr = { git = "https://github.com/hyperledger/indy-vdr", branch = "did-indy" }
indy-data-types = "0.5"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "time", "default", "macros"] }
rand =  "0.5"
clap = { version = "3.1.3", features = ["derive"] }
log = "0.4.0"
env_logger = "0.9.0"
futures-executor = "0.3.17"
futures = "0.3.21"

[features]
derive = []
